# distributed_fs_grpc

./: .gitignore  CMakeLists.txt  readme-student.md  readme.md  submit.py
.github/workflows/: ccpp.yml
docs/: part1.md
part1/: dfs-service.proto  dfslib-clientnode-p1.cpp  dfslib-servernode-p1.cpp  dfslib-servernode-p1.h  dfslib-shared-p1.h
part2/: dfs-service.proto  dfslib-clientnode-p2.cpp  dfslib-clientnode-p2.h  dfslib-servernode-p2.cpp  dfslib-servernode-p2.h  dfslib-shared-p2.cpp  dfslib-shared-p2.h
part2/src/: dfs-client-p2.cpp
